--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
-*.rbc
-capybara-*.html
-.rspec
-/db/*.sqlite3
-/db/*.sqlite3-journal
-/db/*.sqlite3-[0-9]*
-/public/system
-/coverage/
-/spec/tmp
-*.orig
-rerun.txt
-pickle-email-*.html
+# *.rbc
+# capybara-*.html
+# .rspec
+# /db/*.sqlite3
+# /db/*.sqlite3-journal
+# /db/*.sqlite3-[0-9]*
+# /public/system
+# /coverage/
+# /spec/tmp
+# *.orig
+# rerun.txt
+# pickle-email-*.html
 
 # Ignore all logfiles and tempfiles.
 /log/*
